[gd_scene load_steps=10 format=3 uid="uid://bnagkyfue6hh1"]

[ext_resource type="Script" uid="uid://j00iyaa7y434" path="res://scripts/player.gd" id="1_bo1nx"]
[ext_resource type="Script" uid="uid://bp4yu26260mkk" path="res://Scenes/main.gd" id="1_kry3j"]
[ext_resource type="Texture2D" uid="uid://6f80b7i25pgu" path="res://assets/New Piskel-1.png.png" id="2_8gbba"]
[ext_resource type="PackedScene" uid="uid://c3hqd31xvie3d" path="res://Scenes/hazzard.tscn" id="3_8gbba"]
[ext_resource type="Script" uid="uid://bm4l2gitd50he" path="res://Scenes/hazard_spawner.gd" id="4_jjvhh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(32, 700)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(1400, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(1500, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(22, 21)

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_kry3j")

[node name="Walls" type="Node2D" parent="."]

[node name="WallLeft" type="StaticBody2D" parent="Walls"]
collision_layer = 2

[node name="Left" type="CollisionShape2D" parent="Walls/WallLeft"]
position = Vector2(10, 324)
shape = SubResource("RectangleShape2D_h2yge")

[node name="WallRight" type="StaticBody2D" parent="Walls"]
collision_layer = 2

[node name="Right" type="CollisionShape2D" parent="Walls/WallRight"]
position = Vector2(1185, 321)
shape = SubResource("RectangleShape2D_h2yge")

[node name="WallTop" type="StaticBody2D" parent="Walls"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallTop"]
position = Vector2(546, 15)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="WallDown" type="StaticBody2D" parent="Walls"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallDown"]
position = Vector2(724, 690)
shape = SubResource("RectangleShape2D_lquwl")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Hazard" parent="UI" instance=ExtResource("3_8gbba")]
z_index = 1
position = Vector2(400, 80)

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.347817, 0.347817, 0.347817, 1)

[node name="Label" type="Label" parent="UI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0208333
anchor_top = 0.0324074
anchor_right = 0.0953056
anchor_bottom = 0.0724074
offset_right = 0.208
offset_bottom = 1.08
pivot_offset = Vector2(8, 8)
text = " DEBUG OK"
metadata/_edit_use_anchors_ = true

[node name="Player" type="CharacterBody2D" parent="UI"]
position = Vector2(576, 324)
collision_mask = 2
script = ExtResource("1_bo1nx")

[node name="Sprite2D" type="Sprite2D" parent="UI/Player"]
scale = Vector2(4, 4)
texture = ExtResource("2_8gbba")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Player"]
position = Vector2(-22, -27)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="HazardSpawner" type="Node2D" parent="UI"]
script = ExtResource("4_jjvhh")
hazard_scene = ExtResource("3_8gbba")

[node name="LeftSpawner" type="Marker2D" parent="UI/HazardSpawner"]
position = Vector2(50, 0)

[node name="RightSpawner" type="Marker2D" parent="UI/HazardSpawner"]
position = Vector2(750, 0)

[node name="Timer" type="Timer" parent="UI/HazardSpawner"]
wait_time = 1.5
autostart = true

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="GameOver" type="Label" parent="UI_Layer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -24.5
offset_right = 74.0
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "GAME OVER
"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TimeLabel" type="Label" parent="HUD"]
anchors_preset = -1
anchor_left = 0.869542
anchor_top = 0.032
anchor_right = 0.982
anchor_bottom = 0.109667
offset_left = 0.287964
offset_top = 0.264
offset_right = -0.264038
offset_bottom = -0.064003
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 1
text = "Time:0.0s"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="UI/HazardSpawner/Timer" to="UI/HazardSpawner" method="_on_timer_timeout"]
